# bazel-swc-paths-bug-repo

./: .swcrc  BUILD.bazel  README.md  WORKSPACE  package.json  pnpm-lock.yaml  repro.sh  tsconfig.json
src/: BUILD.bazel  index.ts
src/parent/: BUILD.bazel  index.ts
src/parent/child/: BUILD.bazel
